--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
   <a href="http://localhost:3000/users/onlyName/">Only Name</a>
   <a href="http://localhost:3000/users/onlyId/">Only Id</a>
   <a href="http://localhost:3000/users/search/">Search By Id</a>
+  <a href="http://localhost:3000/users/edit/">Editar Usuario</a>
   <a href="http://localhost:3000/users/">Home</a>
   </div>
   </div>
