--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 a,a:visited, a:link{
 	color: #455A64;
 	text-decoration: none;
-	font-size: 1.5em;
+	font-size: 1em;
 	margin:0 1em;
 	transition: all .4s cubic-bezier(0.29, 0.25, 0.35, 0.97);
 }
@@ -98,6 +98,12 @@ li{
 	display: flex;
 	justify-content: center;
 	text-align: center;
+	transition: all 1.5s cubic-bezier(0.29, 0.25, 0.35, 0.97);
+}
+
+li:hover{
+	background: #000;
+	transition: all 1.5s cubic-bezier(0.29, 0.25, 0.35, 0.97);
 }
 
 .nombre{
